<resources>

    <string name="app_name">WAVE</string>
    
    <string name="title_activity_settings">Settings</string>
    <string name="title_preset_category">Preset volume levels</string>
    <string name="title_custom_category">Custom volume levels</string>
    <string name="title_sel_profile">Selected sound profile</string>
    <string name="title_custom_sl_enable">Enable custom volume levels</string>
    <string name="title_custom_sl_one">Chirp - volume</string>
    <string name="title_custom_sl_two">Wind - volume</string>
    <string name="title_custom_sl_three">Rain - volume</string>
    <string name="title_custom_sl_four">River - volume</string>
    <string name="title_custom_sl_five">Environment - volume</string>

    <string name="key_sound_profile_list">sound_profile_list_pref</string>
    <string name="key_enable_custom_sl">enable_custom_sl</string>
    <string name="key_custom_sl_one">custom_sl_one</string>
    <string name="key_custom_sl_two">custom_sl_two</string>
    <string name="key_custom_sl_three">custom_sl_three</string>
    <string name="key_custom_sl_four">custom_sl_four</string>
    <string name="key_custom_sl_five">custom_sl_five</string>

</resources>
